<package>
    <name>platform_motion</name>
    <version>0.1.0</version>
    <description>
        Motion control for the SUrvey Sample Return robot.
    </description>
    <author>contradict</author>
    <license>BSD</license>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <url>https://github.com/contradict/SampleReturn</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>eigen_conversions</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>canopen</build_depend>
    <build_depend>bfl</build_depend>
    <build_depend>platform_motion_msgs</build_depend>
    <build_depend>visual_servo_msgs</build_depend>
    <build_depend>manipulator_msgs</build_depend>
    <build_depend>rviz</build_depend>
    <build_depend>cmake_modules</build_depend>

    <run_depend>platform_motion_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>joy</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf_conversions</run_depend>
    <run_depend>eigen_conversions</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>canopen</run_depend>
    <run_depend>bfl</run_depend>
    <run_depend>visual_servo_msgs</run_depend>
    <run_depend>manipulator_msgs</run_depend>
    <run_depend>rviz</run_depend>

    <export>
        <!-- <rviz plugin="${prefix}/plugin_description.xml"/> -->
    </export>

</package>


