<package>
  <name>sbpl_lattice_planner_msgs</name>
  <version>0.0.0</version>
  <description>sbpl_lattice_planner_msgs</description>
  <maintainer email="brandon.m.booth@gmail.com"></maintainer>
  <author>Michael Phillips, Dave Hershberger</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/sbpl_lattice_planner</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>

</package>
