<package>
    <name>sync_images</name>
    <version>0.2.0</version>
    <description>
        Sync image data from stereo pair.
    </description>
    <author>Thomas Denewiler</author>
    <license>BSD</license>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <url>https://github.com/contradict/SampleReturn</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_filters</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_filters</run_depend>
</package>
