<package>
  <name>the_smooth_planner</name>
  <version>0.1.11</version>
  <description>the_smooth_planner</description>
  <maintainer email="brandon.m.booth@gmail.com">Brandon Booth</maintainer>
  <author>Brandon Booth</author>
  <license></license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>ecl_geometry</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lthe_smooth_planner"/>
    <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>

</package>


